Added new changes of upto Login page fully working but not the NewUser.java file