@@ -5,6 +5,34 @@
     <artifactId>HospitalManagementSystem</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <build>
+        <plugins>
+            
+        <plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <version>3.11.0</version>
+  <configuration>
+    <release>24</release>
+    <compilerArgs>
+      <arg>--enable-preview</arg>
+    </compilerArgs>
+    </configuration>
+    </plugin>
+
+  <plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <version>3.1.0</version>
+  <configuration>
+    <mainClass>hospital.views.NewUser</mainClass>
+    <arguments>
+      <argument>--enable-preview</argument>
+    </arguments>
+    </configuration>
+    </plugin>
+    </plugins>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>24</maven.compiler.release>
@@ -16,6 +44,11 @@
             <groupId>com.microsoft.sqlserver</groupId>
             <artifactId>mssql-jdbc</artifactId>
             <version>12.4.2.jre11</version> <!-- or match your Java version (see below) -->
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf</artifactId>
+            <version>3.6</version>
         </dependency>
     </dependencies>
 </project>
